add health check to stirling-pdf

--- a/src/roles/app-server/tasks/setup-stirling.yml
+++ b/src/roles/app-server/tasks/setup-stirling.yml
@@ -36,7 +36,10 @@
       - "{{ host_stirling_folder_location }}/logs:/logs"
       - "{{ host_stirling_folder_location }}/config:/configs"
       - "{{ host_stirling_folder_location }}/training-data:/usr/share/tessdata"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/api/v1/info/status | grep -q 'UP' && curl -fL http://localhost:8080/ | grep -qv 'Please sign in'"]
+      interval: 5s
+      timeout: 10s
+      retries: 16
     labels:
       com.centurylinklabs.watchtower.enable: "true"
-    container_default_behavior: compatibility
-  
