add mealie with db add mealie with dns

--- a/src/roles/app-server/tasks/swag-dns.yml
+++ b/src/roles/app-server/tasks/swag-dns.yml
@@ -172,6 +172,16 @@
     owner: william
     group: william
 
+- name: Load 'mealie.conf'
+  become: true
+  copy:
+    src: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/mealie.subdomain.conf.sample"
+    dest: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/mealie.subdomain.conf"
+    remote_src: true
+    mode: "0755"
+    owner: william
+    group: william
+
 - name: Restart SWAG after DNS entries changed for DNS entries
   docker_container:
     name: swag
