--- a/src/roles/app-server/templates/node-red.subdomain.conf
+++ b/src/roles/app-server/templates/node-red.subdomain.conf
@@ -33,7 +33,7 @@ server {
 
         include /config/nginx/proxy.conf;
         include /config/nginx/resolver.conf;
-        set $upstream_app {{ nr_port }};
+        set $upstream_app {{ nr_container_ip }};
         set $upstream_port 1880;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
