--- a/src/roles/app-server/tasks/setup-mealie.yml
+++ b/src/roles/app-server/tasks/setup-mealie.yml
@@ -31,7 +31,7 @@
       POSTGRES_DB: "{{ mealie_db_name }}"
       PGDATA: /data/postgres
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 20s
       timeout: 8s
       retries: 5
@@ -51,23 +51,23 @@
       - "{{ host_mealie_folder_location }}/app:/app/data:rw"
       - "/etc/timezone:/etc/timezone:ro"
     env:
-      PUID: 1000
-      PGID: 1000
+      PUID: "1000"
+      PGID: "1000"
       TZ: "{{ time_zone }}"
       ALLOW_SIGNUP: "false"
-      RECIPE_PUBLIC: 'true'
-      RECIPE_SHOW_ASSETS: 'true'
+      RECIPE_PUBLIC: "true"
+      RECIPE_SHOW_ASSETS: "true"
       BASE_URL: "{{ mealie_url }}"
       # Database Setetings
-      DB_ENGINE: postgres
+      DB_ENGINE: "postgres"
       POSTGRES_USER: "{{ mealie_db_user }}"
       POSTGRES_PASSWORD: "{{ mealie_db_password }}"
-      POSTGRES_SERVER: mealie-db
+      POSTGRES_SERVER: "mealie-db"
       POSTGRES_DB: "{{ mealie_db_name }}"
     ports:
       - 9925:9000
     healthcheck:
-      test: ["CMD", "curl", "-kL", "http://localhost:80"]
+      test: ["CMD", "curl", "-kL", "http://localhost:9000"]
       interval: 15s
       timeout: 10s
       retries: 5
