fix mealie healthcheck - remove setup traccar to use postgres (consistency) update config for new database config add healthchecks

--- a/src/roles/app-server/tasks/setup-mealie.yml
+++ b/src/roles/app-server/tasks/setup-mealie.yml
@@ -66,10 +66,6 @@
       POSTGRES_DB: "{{ mealie_db_name }}"
     ports:
       - 9925:9000
-    healthcheck:
-      test: ["CMD", "curl", "-kL", "http://localhost:9000"]
-      interval: 15s
-      timeout: 10s
-      retries: 5
+    # Healthcheck built into the container
     labels:
       com.centurylinklabs.watchtower.enable: "true"
