--- a/src/roles/app-server/tasks/setup-traccar.yml
+++ b/src/roles/app-server/tasks/setup-traccar.yml
@@ -65,10 +65,11 @@
     env:
       TZ: "{{ time_zone }}"
       VERSION: "docker"
-    healthcheck:
-      test: "wget --no-verbose --tries=1 --spider http://localhost:8082 || exit 1"
-      interval: 20s
-      timeout: 8s
-      retries: 5
+    #healthcheck:
+    #  test: "wget --no-verbose --tries=1 --spider http://localhost:8082 || exit 1"
+    #  start_interval: 15s
+    #  interval: 20s
+    #  timeout: 8s
+    #  retries: 5
     labels:
       com.centurylinklabs.watchtower.enable: "true"
