--- a/src/roles/app-server/tasks/setup-traccar.yml
+++ b/src/roles/app-server/tasks/setup-traccar.yml
@@ -67,7 +67,7 @@
       TZ: "{{ time_zone }}"
       VERSION: "docker"
     healthcheck:
-     test: "wget --no-verbose --tries=1 --spider http://localhost:8082 || exit 1"
+     test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8082"]
      start_period: 15s
      interval: 20s
      timeout: 8s
