attempt to fix traccar without link

--- a/src/roles/app-server/templates/traccar.conf
+++ b/src/roles/app-server/templates/traccar.conf
@@ -7,7 +7,7 @@
 <properties>
 
     <entry key='database.driver'>org.postgresql.Driver</entry>
-    <entry key='database.url'>jdbc:postgresql://db/{{ traccar_db_name }}</entry>
+    <entry key='database.url'>jdbc:postgresql://traccar-db/{{ traccar_db_name }}</entry>
     <entry key='database.user'>{{ traccar_db_user }}</entry>
     <entry key='database.password'>{{ traccar_db_password }}</entry>
 
