--- a/src/roles/app-server/tasks/setup-homarr.yml
+++ b/src/roles/app-server/tasks/setup-homarr.yml
@@ -28,6 +28,10 @@
       - "/etc/timezone:/etc/timezone:ro"
     ports:
       - 7575:7575
+    healthcheck:
+      test: "wget --no-verbose --tries=1 --spider http://localhost:7575 || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 3
     labels:
       com.centurylinklabs.watchtower.enable: "true"
-    container_default_behavior: compatibility
