--- a/src/roles/app-server/tasks/setup-netboot.yml
+++ b/src/roles/app-server/tasks/setup-netboot.yml
@@ -27,5 +27,10 @@
       TZ: "{{ time_zone }}"
       PUID: "1000"
       PGID: "1000"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
     labels:
       com.centurylinklabs.watchtower.enable: "true"
