--- a/src/roles/app-server/tasks/setup-overseerr.yml
+++ b/src/roles/app-server/tasks/setup-overseerr.yml
@@ -24,5 +24,10 @@
         ipv4_address: "{{ overseerr_container_ip }}"
     env:
       TZ: "{{ time_zone }}"
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:5055 || exit 1
+      interval: 15s
+      timeout: 10s
+      retries: 5
     labels:
       com.centurylinklabs.watchtower.enable: "true"
