--- a/src/roles/app-server/tasks/setup-sonarr.yml
+++ b/src/roles/app-server/tasks/setup-sonarr.yml
@@ -30,6 +30,10 @@
       - "/mnt/nas/tv:/tv"
     ports:
       - 8989:8989
+    healthcheck:
+      test: ["CMD", "curl", "-kL", "http://localhost:8989"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
     labels:
       com.centurylinklabs.watchtower.enable: "true"
-    container_default_behavior: compatibility
