--- a/src/roles/app-server/tasks/setup-sonarr.yml
+++ b/src/roles/app-server/tasks/setup-sonarr.yml
@@ -9,6 +9,11 @@
     mode: "0755"
     owner: root
 
+- name: Recurse chmod fix for traccar db
+  become: true
+  command: |
+    sudo chmod 777 -R {{ host_sonarr_folder_location }}/config
+
 - name: Run 'Sonarr' - Docker Container
   docker_container:
     name: sonarr
