--- a/src/roles/monitoring/tasks/grafana-setup.yml
+++ b/src/roles/monitoring/tasks/grafana-setup.yml
@@ -25,6 +25,17 @@
       GF_SECURITY_COOKIE_SAMESITE: "disabled"
       # Separated by ;
       GF_INSTALL_PLUGINS: "grafana-clock-panel"
+      # OIDC Configuration:
+      GF_AUTH_GENERIC_OAUTH_ENABLED: "true"
+      GF_AUTH_OAUTH_AUTO_LOGIN: "true"
+      GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: "contains(groups, 'Grafana Admins') && 'Admin' || contains(groups, 'Grafana Editors') && 'Editor' || 'Viewer'"
+      GF_AUTH_GENERIC_OAUTH_CLIENT_ID: "{{ oidc_grafana_client_id }}"
+      GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: "{{ oidc_grafana_client_secret }}"
+      GF_AUTH_GENERIC_OAUTH_SCOPES: "openid profile email"
+      GF_AUTH_GENERIC_OAUTH_AUTH_URL: "{{ oidc_grafana_auth_url }}"
+      GF_AUTH_GENERIC_OAUTH_TOKEN_URL: "{{ oidc_grafana_token_url }}"
+      GF_AUTH_GENERIC_OAUTH_API_URL: "{{ oidc_grafana_api_url }}"
+      GF_AUTH_SIGNOUT_REDIRECT_URL: "{{ oidc_grafana_redirect_url }}"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
       interval: 30s
@@ -37,4 +48,3 @@
       - "{{ host_grafana_folder_location }}:/var/lib/grafana"
     labels:
       com.centurylinklabs.watchtower.enable: "true"
-    container_default_behavior: compatibility
