--- a/src/roles/app-server/defaults/main.yml
+++ b/src/roles/app-server/defaults/main.yml
@@ -13,3 +13,4 @@ host_prowlarr_folder_location: /docker/prowlarr
 host_sonarr_folder_location: /docker/sonarr
 host_stirling_folder_location: /docker/stirling-pdf
 host_mealie_folder_location: /docker/mealie
+host_pgadmin_folder_location: /docker/pgadmin
