minor fixes for pgadmin

--- a/src/roles/app-server/tasks/setup-pgadmin.yml
+++ b/src/roles/app-server/tasks/setup-pgadmin.yml
@@ -19,13 +19,13 @@
       - name: curidge
     env:
       PGADMIN_DEFAULT_EMAIL: "{{ pgadmin_default_email }}"
-      PGADMIN_DEFAULT_PASSWORD: "{{pgadmin_default_password }}"
+      PGADMIN_DEFAULT_PASSWORD: "{{ pgadmin_default_password }}"
     volumes:
-      - "{{ host_pgadmin_folder_location }}/config:/var/lib/pgadmin"
+      - "{{ host_pgadmin_folder_location }}/config:/etc/pgadmin"
     ports:
       - 5050:80
     healthcheck:
-      test: ["CMD", "curl", "-kL", "http://localhost:80"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80"]
       interval: 15s
       timeout: 10s
       retries: 5
