--- a/src/roles/app-server/tasks/main.yml
+++ b/src/roles/app-server/tasks/main.yml
@@ -2,34 +2,34 @@
 # Description: Run all home-server applications
 - import_tasks: docker-setup.yml
 
-- import_tasks: setup-watchtower.yml
+# - import_tasks: setup-watchtower.yml
 
-- import_tasks: setup-portainer.yml
+# - import_tasks: setup-portainer.yml
 
-- import_tasks: setup-swag.yml
+# - import_tasks: setup-swag.yml
 
-- import_tasks: setup-transmission.yml
+# - import_tasks: setup-transmission.yml
+
+# - import_tasks: setup-plex.yml
+
+# - import_tasks: setup-tautulli.yml
+
+# - import_tasks: setup-overseerr.yml
+
+# - import_tasks: setup-traccar.yml
+
+# - import_tasks: setup-homarr.yml
+
+# - import_tasks: setup-netboot.yml
+
+# - import_tasks: setup-prowlarr.yml
+
+# - import_tasks: setup-radarr.yml
+
+# - import_tasks: setup-sonarr.yml
+
+# - import_tasks: setup-stirling.yml
+
+# - import_tasks: setup-mealie.yml
 
 - import_tasks: setup-pgadmin.yml
-
-- import_tasks: setup-plex.yml
-
-- import_tasks: setup-tautulli.yml
-
-- import_tasks: setup-overseerr.yml
-
-- import_tasks: setup-traccar.yml
-
-- import_tasks: setup-homarr.yml
-
-- import_tasks: setup-netboot.yml
-
-- import_tasks: setup-prowlarr.yml
-
-- import_tasks: setup-radarr.yml
-
-- import_tasks: setup-sonarr.yml
-
-- import_tasks: setup-stirling.yml
-
-- import_tasks: setup-mealie.yml
