--- a/src/roles/app-server/tasks/setup-pgadmin.yml
+++ b/src/roles/app-server/tasks/setup-pgadmin.yml
@@ -1,13 +1,15 @@
 # pgAdmin
 # Documentation: https://www.pgadmin.org/docs/pgadmin4/latest/container_deployment.html
 # Purpose: Database web client for connecting to Postgres databases
-- name: Create docker volume
+- name: Create docker volume for pgadmin directories
   become: true
   file:
-    path: "{{ host_pgadmin_folder_location }}"
+    path: "{{ item }}"
     state: directory
-    mode: 0777
-    owner: root
+    mode: "0777"
+  with_items:
+    - "{{ host_netboot_folder_location }}"
+    - "{{ host_netboot_folder_location }}/pgadmin4"
 
 - name: Run 'pgadmin' - Docker Container
   docker_container:
@@ -22,6 +24,7 @@
       PGADMIN_DEFAULT_PASSWORD: "{{ pgadmin_default_password }}"
     volumes:
       - "{{ host_pgadmin_folder_location }}:/var/lib/pgadmin"
+      - "{{ host_pgadmin_folder_location }}/pgadmin4:/pgadmin4"
     ports:
       - 5050:80
     healthcheck:
