--- a/src/roles/app-server/tasks/setup-pgadmin.yml
+++ b/src/roles/app-server/tasks/setup-pgadmin.yml
@@ -29,7 +29,7 @@
       PGADMIN_DEFAULT_PASSWORD: "{{ pgadmin_default_password }}"
     volumes:
       - "{{ host_pgadmin_folder_location }}:/var/lib/pgadmin"
-      - "{{ host_pgadmin_folder_location }}/config.py:/pgadmin4/config.py:rw"
+      - "{{ host_pgadmin_folder_location }}/config.py:/etc/pgadmin/config_system.py:rw"
     ports:
       - 5050:80
     healthcheck:
