--- a/src/roles/app-server/tasks/setup-pgadmin.yml
+++ b/src/roles/app-server/tasks/setup-pgadmin.yml
@@ -14,7 +14,7 @@
   become: true
   template:
     src: pgadmin.conf
-    dest: "{{ host_pgadmin_folder_location }}/config.py"
+    dest: "{{ host_pgadmin_folder_location }}/config_local.py"
 
 - name: Recurse chmod
   become: true
@@ -34,7 +34,7 @@
       PGADMIN_DEFAULT_PASSWORD: "{{ pgadmin_default_password }}"
     volumes:
       - "{{ host_pgadmin_folder_location }}:/var/lib/pgadmin"
-      - "{{ host_pgadmin_folder_location }}/config.py:/etc/pgadmin/config_system.py:rw"
+      - "{{ host_pgadmin_folder_location }}/config_local.py:/pgadmin4/config_local.py:rw"
     ports:
       - 5050:80
     healthcheck:
